# server

./: .gitignore  CMakeLists.txt  analysis.md  client.cpp  server.c
client/: .gitignore  CMakeLists.txt  main.cpp
client/include/: client.h  common.h  main_window.h  video_widget.h
client/src/: client.cpp  main_window.cpp  video_widget.cpp
server/: CMakeLists.txt  server.c
